# providence

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .lfsconfig  .pre-commit-config.yaml  CHANGELOG.md  CONTROL_PLAN.rst  DESIGN.md  Dockerfile-jenkins  Jenkinsfile  LICENSE.txt  LICENSE_AND_REQUIRED_MARKING.rst  MANIFEST.in  NOTICE.md  README.md  README.rst  benchmark_evaluation.py  conftest.py  databricks-pip-init.sh  detect7.sh  find_learning_rate.py  mypy-out-for-providence.txt  mypy.ini  pip.conf  pyproject.toml  pytest.ini  requirements-debug.txt  requirements-dev.txt  requirements-optional.txt  requirements.txt  setup.cfg  setup.py  simple-run-on-db.yml  sweeps.json  test-providence-notebook.py  torchtest.py  tox.ini  train-databricks.py  train.py  train_single.py  (+1 more)
competitor_comparison/: ts_transformer.py
docs/: Makefile
docs/source/: conf.py  index.rst
dpcli_image/: Dockerfile  README.md  requirements-dev.txt  requirements.txt
examples/: 01_1_high_level_api.py  01_2_high_level_api_with_overrides.py  01_3_high_level_api_custom_model.py  01_4_high_level_api_with_custom_optimizer.py  01_5_high_level_api_metrics.py  02_mid_level_api_custom_model.py  03_custom_training_via_high_and_mid_level_api.py  04_callbacks_via_mid_level_api.py  05_1_custom_loss_with_low_level_api.py  05_2_custom_loss_with_low_level_objects_api.py  06_martinsson_experiment_4_2.py  07_full_model_evaluation.py  README.md  example_training_fewest_lines.py  underfit-nasa-vis.py  wiggles.py
examples/mflow/: basic_parameter_sweeping.ipynb  basic_parameter_sweeping.py
experiments/: __init__.py  axial_attention.py  data_quality_ablation.py
experiments/configs/: experiment-001.json  experiment-001.old.json  experiment-002.json
experiments/databricks/: LearningRateFinder.py  MSE Loss Due Diligence.py  MSE_loss_check.py  attention_axis_assessment.py  axial_attention.py  better_sweeper.py  deepmind_with_lr_finder.py  drafting_better_metrics.py  file_packing_check.py  gru_horovod_sweep.py  hybrid sweep - GRU NASA redux.py  hybrid sweep - Transformer NASA redux.py  sweep_find_best_models.py
notebooks/: Experiment-Analysis-Censoring-Proportion.ipynb  Experiment-Analysis-Failure-Proportion-Backblaze.ipynb  databricks_backblaze_lstm.py  padding-time-trial.ipynb
providence/: __init__.py  _version.py  checking_mypy.py  dataloaders.py  distributions.py  loss.py  metrics.py  paper_reproductions.py  training.py  type_utils.py  types.py  utils.py  visualization.py
providence/datasets/: __init__.py  adapters.py  backblaze.py  core.py  nasa.py  nasa_summary_stats.json  utils.py
providence/distributions/: __init__.py  weibull.py
providence/loss/: __init__.py  loss.py
providence/model/: gru.py  lstm.py  rnn.py  transformer.py
providence/nn/: __init__.py  adaptive.py  module.py  rnn.py  weibull.py
providence/utils/: logging_utils.py  utils.py
providence_utils/: __init__.py  callbacks.py  databricks.py  fastai_layers.py  fastai_torch_core.py  fastai_utils.py  fastcore_meta.py  hyperparameter_sweeper.py  merge_dict.py  mlflow.py  model_output_heads.py  trainer.py  ts_transformer.py  types.py  visualization.py
providence_utils/tst/: TSPerceiver.py  TSSequencerPlus.py  TST.py  TSTPlus.py  TSiTPlus.py
scripts/: check_weibull_activation_components.py  db_horovod_train.py  example_horoved_train_mnist.py  reproduction_benchmark.py
tests/: conftest.py  test_callbacks.py  test_dataloaders.py  test_datasets.py  test_datasets_legacy.py  test_distributions.py  test_loss.py  test_metrics.py  test_metrics_calculator.py  test_metrics_legacy.py  test_model_checkpointer.py  test_module_imports.py  test_paper_reproductions.py  test_reproductions.py  test_type_utils.py  test_utils.py  test_viz.py
tests/datasets/: test_backblaze.py  test_bbe.py  test_downloads.py  test_portioning.py  test_utils.py
tests/distributions/: test_weibull.py
(+91 files in other folders)
