# **Raytheon Technologies proprietary**
# Export controlled - see license file

[metadata]
name = providence
version = attr: providence.__version__
author = Stephen Fox
author_email = stephen.fox@rtx.com
description = A library for Neural Time-to-Event modeling
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rtx-corp-open-source/providence
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    ;find:
    providence
    providence.nn
    providence.nn.transformer
    providence.nn.transformer.vendored_memory_effecient_attention
    providence.datasets
    providence_experiments
    providence_experiments.databricks
    providence_utils
    providence_utils.tst
package_dir =
    providence_experiments = experiments

include_package_data = True
install_requires =
    torch>=1.7.0, <=1.12.1
    matplotlib>=3.0.0
    # memory-efficient-attention[torch] # for attribution until they merge upstream. See vendored.../README.md for more
    numpy
    pandas>=1.0.0
    progressbar2 # a better progress bar than tqdm
    requests
    torchtyping>=0.1.4
    typer
python_requires = >=3.8

[options.packages.find]
exclude =
    examples/*
    *.egg-info/*
    mlruns*
    docs*
    test*
    tests*