# **Raytheon Technologies proprietary**
# Export controlled - see license file

[metadata]
name = providence
version = attr: providence.__version__
author = Stephen Fox
author_email = stephen.fox@rtx.com
description = A library for Neural Time-to-Event modeling
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rtx-corp-open-source/providence
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[flake8]
max-line-length = 120
exclude = .git,.tox,__pycache__,build,dist,tests,docs,update_license.py,providence_utils/tst/*,scripts,notebooks/*
    experiments/databricks,
select = E,F,W,B,T,S,D
ignore = SFS301, W503, E731, E231, SFS301, D412, E203
    # docstring related errors
    D101, D102, D103, D105, D107, D205, D400
    # The following are pytorch related flake8 errors:
    E203,E305,E402,E501,E721,E741,F405,F841,F999,W503,W504,C408,E302,W291,E303,
    # shebang has extra meaning in fbcode lints, so I think it's not worth trying
    # to line this up with executable bit
    EXE001,
    # these ignores are from flake8-bugbear; please fix!
    B007,B008,
    # these ignores are from flake8-comprehensions; please fix!
    C407
    # these ignores are from flake8-logging-format; please fix!
    G001,G002,G003,G004,G100,G101,G200,G201,G202
ignore-decorators=property
per-file-ignores =
    tests/*.py: D,
    tests/**/*.py: D,
    docs/**/*.py: D

[options]
packages =
    ;find:
    providence
    providence.nn
    providence.nn.transformer
    providence.nn.transformer.vendored_memory_effecient_attention
    providence.datasets
    ; note that mypy needs to ignore these two modules
    providence_experiments
    providence_experiments.databricks
    providence_utils
    providence_utils.tst
package_dir =
    providence_experiments = experiments

include_package_data = True
install_requires =
    torch>=1.7.0, <=1.12.1
    matplotlib>=3.0.0
    # memory-efficient-attention[torch] # for attribution until they merge upstream. See vendored.../README.md for more
    numpy
    pandas>=1.0.0, <2.0.0
    progressbar2 # a better progress bar than tqdm
    requests
    jaxtyping
    typer
python_requires = >=3.8

[options.packages.find]
exclude =
    examples/*
    *.egg-info/*
    mlruns*
    docs*
    test*
    tests*
